--- a/app/globals.css
+++ b/app/globals.css
@@ -10,52 +10,61 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+  .bg-dot-thick-muted {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke-width='2' stroke='hsl(224 30% 95% / 0.3)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+  }
+  .dark .bg-dot-thick-muted-foreground {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke-width='2' stroke='hsl(262 5% 65% / 0.5)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+  }
+  .bg-dot-thick-primary {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke-width='2' stroke='hsl(262 55% 35% / 0.5)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+  }
 }
 
 @layer base {
   :root {
-    --background: 262 100% 95%;
-    --foreground: 262 5% 0%;
-    --card: 262 50% 90%;
-    --card-foreground: 262 5% 10%;
-    --popover: 262 100% 95%;
-    --popover-foreground: 262 100% 0%;
-    --primary: 262 53% 19%;
+    --background: 262 100% 100%;
+    --foreground: 262 5% 10%;
+    --card: 262 50% 100%;
+    --card-foreground: 262 5% 15%;
+    --popover: 262 100% 100%;
+    --popover-foreground: 262 100% 10%;
+    --primary: 262 55% 35%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 262 30% 70%;
+    --secondary: 262 30% 90%;
     --secondary-foreground: 0 0% 0%;
-    --muted: 224 30% 85%;
-    --muted-foreground: 262 5% 35%;
-    --accent: 224 30% 80%;
-    --accent-foreground: 262 5% 10%;
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 262 5% 90%;
-    --border: 262 30% 50%;
-    --input: 262 30% 18%;
-    --ring: 262 53% 19%;
+    --muted: 224 30% 95%;
+    --muted-foreground: 262 5% 40%;
+    --accent: 224 30% 90%;
+    --accent-foreground: 262 5% 15%;
+    --destructive: 0 100% 50%;
+    --destructive-foreground: 262 5% 100%;
+    --border: 262 30% 82%;
+    --input: 262 30% 50%;
+    --ring: 262 55% 35%;
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 262 50% 5%;
-    --foreground: 262 5% 90%;
-    --card: 262 50% 0%;
-    --card-foreground: 262 5% 90%;
+    --background: 262 50% 10%;
+    --foreground: 262 5% 100%;
+    --card: 262 50% 10%;
+    --card-foreground: 262 5% 100%;
     --popover: 262 50% 5%;
-    --popover-foreground: 262 5% 90%;
-    --primary: 262 53% 19%;
+    --popover-foreground: 262 5% 100%;
+    --primary: 262 55% 35%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 262 30% 10%;
+    --secondary: 262 30% 20%;
     --secondary-foreground: 0 0% 100%;
-    --muted: 224 30% 15%;
-    --muted-foreground: 262 5% 60%;
-    --accent: 224 30% 15%;
-    --accent-foreground: 262 5% 90%;
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 262 5% 90%;
-    --border: 262 30% 18%;
-    --input: 262 30% 18%;
-    --ring: 262 53% 19%;
+    --muted: 224 30% 25%;
+    --muted-foreground: 262 5% 65%;
+    --accent: 224 30% 25%;
+    --accent-foreground: 262 5% 95%;
+    --destructive: 0 100% 50%;
+    --destructive-foreground: 262 5% 100%;
+    --border: 262 30% 50%;
+    --input: 262 30% 50%;
+    --ring: 262 55% 35%;
     --radius: 0.5rem;
   }
 }
